# ChordDiagramGenerator

./: .gitignore  LICENSE  README.md  chord_diagram_generator.py  generate_svg.py  guitar_chords.py  main.py  pyproject.toml
