[tool.poetry]
name = "ChordDiagramGenerator"
version = "0.1.0"
description = "A package for generating chord diagrams"
authors = ["Micha Vardy michavardy@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
svgwrite = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_svg = "generate_svg:main"
